fixed overflow-x

--- a/cingo-front-end/my-app/src/App.css
+++ b/cingo-front-end/my-app/src/App.css
@@ -24,14 +24,15 @@
 }
 
 .chatbox{
-    overflow-x:scroll;
+    overflow-y:scroll;
+    overflow-x: hidden;
     height: 400px;
     padding-left:15px;
     padding-right:15px;
     
 }
 
-#surround{padding:20px}
+#surround{padding:10px}
 
 .brand{
     text-align:right;
